--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -90,6 +90,14 @@
     content: |
          idp.oidc.issuer= https://{{ service_name }}
 
+- name: Set oidc registration storage service to idp.properties
+  blockinfile:
+    dest: "{{ idp_home }}/conf/idp.properties"
+    marker: "# {mark} ANSIBLE MANAGER BLOCK 2"
+    insertafter: "idp.oidc.issuer"
+    content: |
+         idp.oidc.dynreg.StorageService = shibboleth.JPAStorageService
+
 - name: Add one trusted test SP
   blockinfile:
     dest: "{{ idp_home }}/conf/metadata-providers.xml"
