--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -226,7 +226,7 @@
         </util:list>
 
 
-- name: Add OIDC name identifier generation and oidc relying party services to services-system.xml  - SYSTEM DIRECTORY CHANGE!!
+- name: Add OIDC name identifier generation to services-system.xml  - SYSTEM DIRECTORY CHANGE!!
   blockinfile:
     dest: "{{ idp_home }}/system/conf/services-system.xml"
     marker: "<!-- {mark} ANSIBLE MANAGED BLOCK  for OIDC NameIdentifierGenerationService and OIDC relying party -->"
@@ -240,25 +240,7 @@
             p:beanPostProcessors-ref="shibboleth.IdentifiableBeanPostProcessor"
             p:beanFactoryPostProcessors-ref="shibboleth.PropertySourcesPlaceholderConfigurer" />
 
-        <bean id="shibboleth.oidc.RelyingPartyResolverService" class="net.shibboleth.ext.spring.service.ReloadableSpringService"
-            p:serviceConfigurations-ref="#{'%{idp.service.relyingparty.oidc.resources:shibboleth.oidc.RelyingPartyResolverResources}'.trim()}"
-            p:failFast="%{idp.service.relyingparty.failFast:%{idp.service.failFast:false}}"
-            p:reloadCheckDelay="%{idp.service.relyingparty.checkInterval:PT0S}"
-            p:beanPostProcessors-ref="shibboleth.IdentifiableBeanPostProcessor"
-            p:beanFactoryPostProcessors-ref="shibboleth.PropertySourcesPlaceholderConfigurer">
-        <constructor-arg name="claz" value="net.shibboleth.idp.relyingparty.RelyingPartyConfigurationResolver" />
-        <constructor-arg name="strategy">
-            <bean class="net.shibboleth.ext.spring.service.ClassBasedServiceStrategy"
-                c:serviceableClaz="net.shibboleth.idp.relyingparty.impl.DefaultRelyingPartyConfigurationResolver" />
-        </constructor-arg>
-        </bean>
-
-        <bean id="shibboleth.oidc.RelyingPartyConfigurationResolver"
-            class="net.shibboleth.idp.relyingparty.impl.ReloadingRelyingPartyConfigurationResolver"
-            c:resolverService-ref="shibboleth.oidc.RelyingPartyResolverService" />
-
-
-- name: Add OIDC name identifier generation and oidc relying party resources to services.xml
+- name: Add OIDC name identifier generation to services.xml
   blockinfile:
     dest: "{{ idp_home }}/conf/services.xml"
     marker: "<!-- {mark} ANSIBLE MANAGED BLOCK  for OIDC NameIdentifierGenerationResources -->"
@@ -267,12 +249,6 @@
         <util:list id ="shibboleth.oidc.NameIdentifierGenerationResources">
             <value>%{idp.home}/conf/oidc-subject.xml</value>
             <value>%{idp.home}/system/conf/oidc-subject-system.xml</value>
-        </util:list>
-   
-        <util:list id="shibboleth.oidc.RelyingPartyResolverResources">
-            <value>%{idp.home}/conf/oidc-relying-party.xml</value>
-            <value>%{idp.home}/conf/credentials.xml</value>
-            <value>%{idp.home}/system/conf/oidc-relying-party-system.xml</value>
         </util:list>
      
 
@@ -283,6 +259,30 @@
     - "oidc-subject.properties"
     - "oidc-relying-party.xml"
 
+- name: Import oidc-relying-party to relying-party.xml
+  blockinfile:
+    dest: "{{ idp_home }}/conf/relying-party.xml"
+    marker: "<!-- {mark} ANSIBLE MANAGED BLOCK IMPORT OIDC BEANS -->"
+    insertafter: "default-destroy-method"
+    content: |
+         <import resource="oidc-relying-party.xml"/>
+    
+- name: Add OIDC.Registration profile configuration to relying-party.xml
+  blockinfile:
+    dest: "{{ idp_home }}/conf/relying-party.xml"
+    marker: "<!-- {mark} ANSIBLE MANAGED BLOCK OIDC REG -->"
+    insertafter: "<!-- <bean parent=\"SAML2.SSO\" p:encryptAssertions=\"false\" /> -->"
+    content: |
+         <bean parent="OIDC.Registration" />
+
+- name: Add OIDC.SSO profile configuration to relying-party.xml
+  blockinfile:
+    dest: "{{ idp_home }}/conf/relying-party.xml"
+    marker: "<!-- {mark} ANSIBLE MANAGED BLOCK OIDC SSO -->"
+    insertafter: "SSOS"
+    content: |
+         <bean parent="OIDC.SSO" p:postAuthenticationFlows="attribute-release" />
+
 - name: Add oidc-subject.properties to included confs in idp.properties
   lineinfile:
     dest: /opt/shibboleth-idp/conf/idp.properties
@@ -290,12 +290,11 @@
     line: '\1, /conf/oidc-subject.properties'
     backrefs: yes
 
-- name: Copy oidc-relying-party-system.xml and oidc-subject-system.xml - SYSTEM DIRECTORY CHANGE!!
+- name: Copy oidc-subject-system.xml - SYSTEM DIRECTORY CHANGE!!
   template: src={{ playbook_dir }}/roles/oidc-extension/templates/{{item}} dest=/opt/shibboleth-idp/system/conf/{{item}}
   with_items:
     - "oidc-subject-system.xml"
-    - "oidc-relying-party-system.xml"
-
+    
 - template: src={{ playbook_dir }}/roles/oidc-extension/templates/{{item}} dest=/opt/shibboleth-idp/conf/{{item}}
   with_items:
     - "logback.xml"
