opensaml-storage-impl dependency for tests

--- a/idp-oidc-extension-impl/pom.xml
+++ b/idp-oidc-extension-impl/pom.xml
@@ -108,6 +108,11 @@
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
+        <dependency>
+            <groupId>org.opensaml</groupId>
+            <artifactId>opensaml-storage-impl</artifactId>
+           <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
