Configuration property for default subject type

--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -99,6 +99,7 @@
          idp.oidc.dynreg.StorageService = shibboleth.JPAStorageService
          idp.oidc.dynreg.defaultValidity = PT24H
          idp.oidc.dynreg.defaultScope = openid
+         idp.oidc.dynreg.defaultSubjectType = public
 
 - name: Add one trusted test SP
   blockinfile:
