--- a/idp-oidc-extension-parent/pom.xml
+++ b/idp-oidc-extension-parent/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.geant</groupId>
     <artifactId>idp-oidc-extension-parent</artifactId>
-    <version>0.5.0</version>
+    <version>0.5.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -106,7 +106,7 @@
             </dependency>
             <dependency>
                 <groupId>org.geant</groupId>
-                <version>0.5.0</version>
+                <version>0.5.1-SNAPSHOT</version>
                 <artifactId>idp-oidc-extension-api</artifactId>
             </dependency>
             <dependency>
