--- a/idp-oidc-extension-parent/pom.xml
+++ b/idp-oidc-extension-parent/pom.xml
@@ -105,6 +105,11 @@
                 <artifactId>idp-attribute-filter-impl</artifactId>
             </dependency>
             <dependency>
+                <groupId>net.shibboleth.idp</groupId>
+                <version>${shib.idp.version}</version>
+                <artifactId>idp-ui</artifactId>
+            </dependency>
+            <dependency>
                 <groupId>org.geant</groupId>
                 <version>0.5.1-SNAPSHOT</version>
                 <artifactId>idp-oidc-extension-api</artifactId>
