default scopes added to pass certifier test

--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -109,7 +109,7 @@
     content: |
          idp.oidc.dynreg.StorageService = shibboleth.JPAStorageService
          idp.oidc.dynreg.defaultValidity = PT24H
-         idp.oidc.dynreg.defaultScope = openid
+         idp.oidc.dynreg.defaultScope = openid phone email address profile
          idp.oidc.dynreg.defaultSubjectType = public
 
 - name: Set default lifetime of oidc tokens to idp.properties
