--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -416,7 +416,8 @@
          OIDCRedirectURI https://192.168.0.150:8443/protected/redirect_uri
          OIDCCryptoPassphrase secret
          OIDCMetadataDir /var/cache/httpd/mod_auth_openidc/metadata
-         OIDCResponseType "id_token"
+         OIDCResponseType "code"
+         OIDCScope "openid email"
          <Location /protected/>
              authtype openid-connect
              require valid-user
