--- a/idp-oidc-extension-api/pom.xml
+++ b/idp-oidc-extension-api/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>idp-oidc-extension-parent</artifactId>
         <groupId>org.geant</groupId>
-        <version>0.5.1-SNAPSHOT</version>
+        <version>0.6.0</version>
         <relativePath>../idp-oidc-extension-parent</relativePath>
     </parent>
     <artifactId>idp-oidc-extension-api</artifactId>
