enable httpd on startup

--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -438,7 +438,9 @@
   with_items:
     - "index.php"
 
-- name: Restart httpd
+- name: Set httpd enabled and restart
   service:
     name: httpd
     state: restarted
+    enabled: yes
+
