Move parent POM to project root
Move `idp-oidc-extension-parent/pom.xml` to the project's root
directory. This simplifies the Maven build configuration.

Issue-Id: CSCfi/shibboleth-idp-oidc-extension#2

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <opensaml.version>3.4.0</opensaml.version>
         <checkstyle.version>2.17</checkstyle.version>
         <checkstyle.configLocation>
-            ../conf/checkstyle.xml
+            conf/checkstyle.xml
         </checkstyle.configLocation>
     </properties>
     <repositories>
@@ -49,9 +49,9 @@
         </repository>
     </repositories>
     <modules>
-        <module>../idp-oidc-extension-api</module>
-        <module>../idp-oidc-extension-impl</module>
-        <module>../idp-oidc-extension-distribution</module>
+        <module>idp-oidc-extension-api</module>
+        <module>idp-oidc-extension-impl</module>
+        <module>idp-oidc-extension-distribution</module>
     </modules>
     <dependencyManagement>
         <dependencies>
