--- a/idp-oidc-extension-parent/pom.xml
+++ b/idp-oidc-extension-parent/pom.xml
@@ -107,6 +107,11 @@
             <dependency>
                 <groupId>net.shibboleth.idp</groupId>
                 <version>${shib.idp.version}</version>
+                <artifactId>idp-consent-impl</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>net.shibboleth.idp</groupId>
+                <version>${shib.idp.version}</version>
                 <artifactId>idp-ui</artifactId>
             </dependency>
             <dependency>
