--- a/roles/oidc-extension/tasks/main.yml
+++ b/roles/oidc-extension/tasks/main.yml
@@ -128,7 +128,8 @@
     content: |
          # Default lifetime of oidc tokens
          #idp.oidc.authorizeCode.defaultLifetime = PT5M
-         #idp.oidc.accessToken.defaultLifetime = PT1H
+         #idp.oidc.accessToken.defaultLifetime = PT10M
+         #idp.oidc.refreshToken.defaultLifetime = PT2H
          #idp.oidc.idToken.defaultLifetime = PT1H
 
 - name: Set properties for revocation cache to idp.properties
