--- a/requirements.yml
+++ b/requirements.yml
@@ -2,6 +2,8 @@
 - src: cmprescott.xml
 - src: CSCfi.mariadb
 - src: CSCfi.jetty
-- src: CSCfi.shibboleth-idp
+- name: CSCfi.shibboleth-idp
+  src: https://github.com/CSCfi/ansible-role-shibboleth-idp
+  version: origin/Snapshot-support
 - src: CSCfi.apache
 - src: CSCfi.389-ds
