--- a/idp-oidc-extension-parent/pom.xml
+++ b/idp-oidc-extension-parent/pom.xml
@@ -130,6 +130,11 @@
                 <artifactId>oidcfederatedmetadatastatement</artifactId>
                 <version>1.1-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>org.opensaml</groupId>
+                <version>${opensaml.version}</version>
+                <artifactId>opensaml-profile-api</artifactId>
+            </dependency>
             <!-- Test Dependencies -->
             <dependency>
                 <groupId>org.opensaml</groupId>
